Social Media Links.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/package.json
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "dependencies": {},
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "breakpoint-sass": "^2.7.1",
     "compass-sass-mixins": "^0.12.7",
     "gulp": "^4.0.0",
