--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/package.json
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/package.json
@@ -2,13 +2,17 @@
   "name": "grandillusion",
   "version": "1.0.0",
   "description": "Sets up Sass development workflow",
+  "engines": {
+    "npm": "6.14.16",
+    "node": "12.22.12"
+  },
   "scripts": {},
   "dependencies": {},
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.10.2",
     "breakpoint-sass": "^2.7.1",
     "compass-sass-mixins": "^0.12.7",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-livereload": "^4.0.1",
