--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,17 +1,18 @@
 name: deansluyter
 type: wordpress
 docroot: wordpress
-php_version: "8.1"
+php_version: "8.3"
 webserver_type: nginx-fpm
 xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-    type: mariadb
-    version: "10.4"
+    type: mysql
+    version: "8.0"
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
+corepack_enable: false
 
 # Key features of DDEV's config.yaml:
 
