--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
-wordpress/*.log
-wordpress/wp-config.php
-wordpress/wp-content/advanced-cache.php
-wordpress/wp-content/backup-db/
-wordpress/wp-content/backups/
-wordpress/wp-content/blogs.dir/
-wordpress/wp-content/cache/
-wordpress/wp-content/upgrade/
-wordpress/wp-content/uploads/
-wordpress/wp-content/mu-plugins/
-wordpress/wp-content/wp-cache-config.php
-wordpress/wp-content/plugins/hello.php
+web/*.log
+web/wp-config.php
+web/wp-content/advanced-cache.php
+web/wp-content/backup-db/
+web/wp-content/backups/
+web/wp-content/blogs.dir/
+web/wp-content/cache/
+web/wp-content/upgrade/
+web/wp-content/uploads/
+web/wp-content/mu-plugins/
+web/wp-content/wp-cache-config.php
+web/wp-content/plugins/hello.php
 
-wordpress/.htaccess
-wordpress/license.txt
-wordpress/readme.html
-wordpress/sitemap.xml
-wordpress/sitemap.xml.gz
+web/.htaccess
+web/license.txt
+web/readme.html
+web/sitemap.xml
+web/sitemap.xml.gz
 
 .DS_Store
 .idea
