--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,6 +1,6 @@
 name: deansluyter
 type: wordpress
-docroot: wordpress
+docroot: web
 php_version: "8.3"
 webserver_type: nginx-fpm
 xdebug_enabled: false
