--- a/web/wp-content/plugins/deansluyter-blocks/package.json
+++ b/web/wp-content/plugins/deansluyter-blocks/package.json
@@ -7,6 +7,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "wp-scripts build",
+    "dev": "wp-scripts start",
     "start": "wp-scripts start",
     "lint:js": "wp-scripts lint-js",
     "format": "wp-scripts format"
