--- a/web/wp-content/themes/deansluyter-theme-2026/package.json
+++ b/web/wp-content/themes/deansluyter-theme-2026/package.json
@@ -9,10 +9,15 @@
     "watch": "node vite-dev-server.mjs",
     "build": "node vite-build.mjs"
   },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "breakpoint-sass": "^2.7.1"
+  },
   "devDependencies": {
     "browser-sync": "^3.0.4",
     "chokidar": "^4.0.3",
     "sass": "^1.94.2",
-    "vite": "^5.4.21"
+    "vite": "^5.4.21",
+    "vite-plugin-sass-glob-import": "^3.0.2"
   }
 }
